--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 class="text-center"><strong>WattCalc</strong> - Mr.Mine Drill Power calculator</h1>
         </div>
         <div class="row">
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 mt-3">
                 <form id="form">
                     <div class="form-group">
                         <label for="engine">Engine</label>
@@ -49,7 +49,7 @@
                     </div>
                 </form>
             </div>
-            <div class="col-sm-12 col-md-5">
+            <div class="col-sm-12 col-md-5 mt-3">
                 <h3 class="text-left">
                     Results
                 </h3>
