--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="WattCalc - Mr.Mine Drill Power calculator"/>
+    <meta property="og:url" content="https://aske-w.github.io/wattcalc/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://repository-images.githubusercontent.com/303812010/fa8da680-0e28-11eb-8ed0-142c98f87901"/>
+    <meta property="og:description" content="Calculate your Mr.Mine drill power with this easy-to-use calculator!">
+    <meta name="description" content="Calculate your Mr.Mine drill power with this easy-to-use calculator!">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -15,7 +21,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <title>WattCalc</title>
+    <title>WattCalc - Mr.Mine Drill Power calculator</title>
 </head>
 
 <body class="bg-light">
