mobile fixes and consent update

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         </div>
     </div>
 
-    <div style="width:100vw;position:absolute;bottom:0px;height:33vh;display:none" class="bg-dark text-white" id="cookieConsent">
-        <div class="container">
+    <div style="width:100%;position:fixed;bottom:0px;display:none" class="bg-dark text-white" id="cookieConsent">
+        <div class="container mt-1 mb-2">
             <h3>Dear user</h3>
             <p>
                 Thank you for using this site! <br>
                 We collect analytics data using Google Analytics in order for us to provide you with the best user experience possible. <br>
-                But in order to do that you have to consent to the collection of these analytics data.
+                But in order to do that you have to consent to the collection of these analytics data and storage of cookies on your device.
             </p>
             <button class="btn btn-success" onclick="consent()">Accept all cookies</button>
         </div>
