consent message update

--- a/index.html
+++ b/index.html
@@ -73,11 +73,17 @@
         <div class="container mt-1 mb-2">
             <h3>Dear user</h3>
             <p>
-                Thank you for using this site! <br>
-                We collect analytics data using Google Analytics in order for us to provide you with the best user experience possible. <br>
+                Thank you for using this site!
+            </p>
+            <p>
+                We collect analytics data using Google Analytics in order for us to provide you with the best user experience possible.
+            </p>
+            <p>
                 But in order to do that you have to consent to the collection of these analytics data and storage of cookies on your device.
             </p>
-            <button class="btn btn-success" onclick="consent()">Accept all cookies</button>
+            <div class="row justify-content-center">
+                <button class="btn btn-success" onclick="consent()">Accept</button>
+            </div>
         </div>
     </div>
 
