updated drill parts, added changelog button

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                         </select>
                     </div>
                     <div class="row justify-content-center">
+                        <a href="https://github.com/aske-w/wattcalc/releases" target="_blank">
+                            <button type="button" class="btn btn-info mr-3">
+                                Changelog
+                            </button>
+                        </a>
                         <button type="button" class="btn btn-info mr-3" data-toggle="modal" data-target="#guideModal">
                             Guide
                         </button>
@@ -161,8 +166,8 @@
         },
         {
             name : "Basic Nuclear Engine",
-            multiplier : 20,
-            power : 30
+            multiplier : 30,
+            power : 20
         },
         {
             name : "Intermediate Nuclear Engine",
@@ -196,15 +201,30 @@
         },
         {
             name : "Gravity Engine",
-            multiplier : 300000,
+            multiplier : 350000,
             power : 1000
         },
         {
             name : "Core Reactor Engine",
             multiplier : 500000,
             power : 5000
+        },
+        {
+            name : "Pressurized Reactor Engine",
+            multiplier : 750000,
+            power : 5000
+        },
+        {
+            name : "Robo Anthropomorphic Engine",
+            multiplier : 1500000,
+            power : 5000
+        },
+        {
+            name : "Rocket Engine",
+            multiplier : 2750000,
+            power : 5000
         }
-    ];
+        ];
     var drills = 
     [
         "drills",
@@ -245,12 +265,12 @@
             power : 20000
         },
         {
-            name : "Smashing Drill",
+            name : "Drill Smasher",
             power : 40000
         },
         {
-            name : "King Drill",
-            power : 100000
+            name : "Demon Smasher Drill",
+            power : 80000
         },
         {
             name : "Lava Drill",
@@ -263,6 +283,18 @@
         {
             name : "Irradiated Drill",
             power : 500000
+        },
+        {
+            name : "Enhanced Irradiated Drill",
+            power : 800000
+        },
+        {
+            name : "Dual Mantle Destroyer Drill",
+            power : 1250000
+        },
+        {
+            name : "Temperature Hardened Drill",
+            power : 2500000
         }
 
     ];
@@ -278,12 +310,12 @@
             power : 5
         },
         {
-            name : "Triple Fan",
+            name : "Triple Fans",
             power : 25
         },
         {
             name : "Quad Fan",
-            power : 300
+            power : 250
         },
         {
             name : "Partinioned Fan",
@@ -295,7 +327,7 @@
         },
         {
             name : "Heat Pump",
-            power : 2700
+            power : 3700
         },
         {
             name : "Segmented Heat Pump",
@@ -323,7 +355,19 @@
         },
         {
             name : "9M PSI Pressure Fan",
-            power : 250000
+            power : 360000
+        },
+        {
+            name : "Liquid Neon Coolant System",
+            power : 720000
+        },
+        {
+            name : "Helium Coolant System",
+            power : 1000000
+        },
+        {
+            name : "Vacuum Chilled Coolant System",
+            power : 2000000
         }
     ];
 
