Added Lunar parts

--- a/index.html
+++ b/index.html
@@ -223,6 +223,21 @@
             name : "Rocket Engine",
             multiplier : 2750000,
             power : 5000
+        },
+        {
+            name : "Lunar Rocket Engine T1",
+            multiplier : 6750000,
+            power : 5000
+        },
+        {
+            name : "Lunar Rocket Engine T2",
+            multiplier : 20250000,
+            power : 5000
+        },
+        {
+            name : "Lunar Rocket Engine T3",
+            multiplier : 40500000,
+            power : 5000
         }
         ];
     var drills = 
@@ -295,6 +310,18 @@
         {
             name : "Temperature Hardened Drill",
             power : 2500000
+        },
+        {
+            name : "Lunar Temperature Hardened Drill T1",
+            power : 6250000
+        },
+        {
+            name : "Lunar Temperature Hardened Drill T2",
+            power : 31250000
+        },
+        {
+            name : "Lunar Temperature Hardened Drill T3",
+            power : 200000000
         }
 
     ];
@@ -368,6 +395,18 @@
         {
             name : "Vacuum Chilled Coolant System",
             power : 2000000
+        },
+        {
+            name : "Lunar Vacuum Chilled Coolant System T1",
+            power : 5000000
+        },
+        {
+            name : "Lunar Vacuum Chilled Coolant System T2",
+            power : 25000000
+        },
+        {
+            name : "Lunar Vacuum Chilled Coolant System T3",
+            power : 217500000
         }
     ];
 
