--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             var option = document.createElement("option");
             option.value = "t" + i + shorthand;
             part.val = option.value;
-            option.innerHTML = "Tier " + part.Level + ": " + part.Name;
+            option.innerHTML = "Tier " + (part.Level - 1) + ": " + part.Name;
             element.appendChild(option);
         }
     }
