Add hover over breakdown explainer

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
                             <li>Read the results</li>
                         </ol>
                     </p>
+                    <h4>Did you know?</h4>
+                    <p>
+                        You can hover over the numbers in the breakdown to see which part the wattage and multiplier corresponds to!
+                    </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
